# get_next_line

./: CMakeLists.txt  README.md  a.out  get_next_line.c  get_next_line.h  gnl.h  main.c  pikul.c  test1  test2
libft/: ft_strlen.c
